<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageViewBackground"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:background="@color/teal_700"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewEntry"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:elevation="10dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="@id/imageViewBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15">

        <ImageView
            android:id="@+id/imageViewEntry"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/cardViewInfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardViewEntry" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewInfo"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:elevation="10dp"
        app:layout_constraintBottom_toTopOf="@id/textViewCategoryLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardViewEntry"
        app:layout_constraintVertical_bias="0.45">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp">

            <TextView
                android:id="@+id/textViewInfoLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/info1"
                android:textColor="@color/olive"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewInfo1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/info1"
                android:textColor="@color/olive"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewInfoLabel" />

            <TextView
                android:id="@+id/textViewInfoLabel2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/info1"
                android:textColor="@color/olive"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/guideline"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewInfo2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/info1"
                android:textColor="@color/olive"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@id/textViewInfoLabel2" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textViewCategoryLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/category"
        android:textColor="@color/olive"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/cardViewInfo"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/category"
        android:textColor="@color/olive"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@id/textViewCategoryLabel"
        app:layout_constraintStart_toStartOf="@id/cardViewEntry" />

    <TextView
        android:id="@+id/textViewExtraLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/extra_info"
        android:textColor="@color/olive"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/cardViewInfo"
        app:layout_constraintTop_toBottomOf="@id/textViewCategoryLabel" />

    <TextView
        android:id="@+id/textViewExtraInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/extra_info"
        android:textColor="@color/olive"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@id/textViewExtraLabel"
        app:layout_constraintStart_toStartOf="@id/textViewCategory" />

    <TextView
        android:id="@+id/textViewDescriptionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/description"
        android:textColor="@color/olive"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/cardViewInfo"
        app:layout_constraintTop_toBottomOf="@id/textViewExtraLabel" />

    <TextView
        android:id="@+id/textViewDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:text="@string/description"
        android:textColor="@color/olive"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@id/textViewDescriptionLabel"
        app:layout_constraintEnd_toEndOf="@id/cardViewInfo"
        app:layout_constraintStart_toStartOf="@id/textViewCategory" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/teal_700"
        android:src="@android:drawable/ic_menu_save"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/upsert_entry" />
</androidx.constraintlayout.widget.ConstraintLayout>